--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,6 @@
     <button id="restartBtn">Neustarten</button>
 </div>
 
-<script src="JS/Game.js"></script>
+<script type="module" src="JS/Game.js"></script>
 </body>
 </html>
